--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>A calculator in js</h1>
+    <section>
+        <div class="title">
+            <h1>A calculator in js</h1>
+        </div>
+    </section>
+    
+
+    <section class="cal-zone">
+        <div class="cal-container">
+            <!-- Display -->
+            <div class="display">1234</div>
+            <!-- First row -->
+            <button class="clear">C</button>
+            <button class="changeSign">±</button>
+            <button class="percent">%</button>
+            <button class="squareRoot">√</button>
+            <!-- Second row -->
+            
+        </div>
+    </section>
 </body>
 <script src="script.js"></script>
 </html>
