--- a/index.html
+++ b/index.html
@@ -13,18 +13,35 @@
         </div>
     </section>
     
-
     <section class="cal-zone">
         <div class="cal-container">
             <!-- Display -->
-            <div class="display">1234</div>
+            <div class="display">[1234]</div>
             <!-- First row -->
-            <button class="clear">C</button>
-            <button class="changeSign">±</button>
-            <button class="percent">%</button>
-            <button class="squareRoot">√</button>
+            <button class="clear" name="clear">C</button>
+            <button class="operator" name="changeSign">±</button>
+            <button class="operator" name="percent">%</button>
+            <button class="operator" name="squareRoot">√</button>
             <!-- Second row -->
-            
+            <button class="number" name="seven">7</button>
+            <button class="number" name="eigth">8</button>
+            <button class="number" name="nine">9</button>
+            <button class="operator" name="division">÷</button>
+            <!-- Third row -->
+            <button class="number" name="four">4</button>
+            <button class="number" name="five">5</button>
+            <button class="number" name="six">6</button>
+            <button class="operator" name="multi">x</button>
+            <!-- Fourth row -->
+            <button class="number" name="one">1</button>
+            <button class="number" name="two">2</button>
+            <button class="number" name="three">3</button>
+            <button class="operator" name="substract">-</button>
+            <!-- Fifth row-->
+            <button class="zero" name="zero">0</button>
+            <button class="operator" name="decimalPoint">.</button>
+            <button class="operator" name="equal">=</button>
+            <button class="operator" name="addition">+</button>
         </div>
     </section>
 </body>
