added styles for calc buttons

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <div class="cal-container">
             <!-- Display -->
             <div class="display">[1234]</div>
-            <!-- First row -->
+            
+            <div class="buttons-container">
+             <!-- First row -->
             <button class="clear" name="clear">C</button>
             <button class="operator" name="changeSign">±</button>
             <button class="operator" name="percent">%</button>
@@ -41,7 +43,9 @@
             <button class="zero" name="zero">0</button>
             <button class="operator" name="decimalPoint">.</button>
             <button class="operator" name="equal">=</button>
-            <button class="operator" name="addition">+</button>
+            <button class="operator" name="addition">+</button>   
+            </div>
+            
         </div>
     </section>
 </body>
