--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A calculator in Javascript</title>
+    <title>A Calculator in Javascript</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,8 +16,8 @@
     <section class="cal-zone">
         <div class="cal-container">
             <!-- Display -->
-            <div class="display">[1234]</div>
-            
+            <textarea class="display" id="inputtext" type="text" placeholder="0"></textarea>
+
             <div class="buttons-container">
              <!-- First row -->
             <button class="clear" name="clear">C</button>
@@ -28,12 +28,12 @@
             <button class="number" name="seven">7</button>
             <button class="number" name="eigth">8</button>
             <button class="number" name="nine">9</button>
-            <button class="operator" name="division">÷</button>
+            <button class="operator" name="division">/</button>
             <!-- Third row -->
             <button class="number" name="four">4</button>
             <button class="number" name="five">5</button>
             <button class="number" name="six">6</button>
-            <button class="operator" name="multi">x</button>
+            <button class="operator" name="multi">*</button>
             <!-- Fourth row -->
             <button class="number" name="one">1</button>
             <button class="number" name="two">2</button>
@@ -45,7 +45,7 @@
             <button class="operator" name="equal">=</button>
             <button class="operator" name="addition">+</button>   
             </div>
-            
+            <div class="credits">Made in Kuriroley</div>
         </div>
     </section>
 </body>
