--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="cal-zone">
         <div class="cal-container">
             <!-- Display -->
-            <textarea class="display" id="inputtext" type="text" placeholder="0"></textarea>
+            <textarea class="display" id="inputtext" type="text" placeholder="0" maxlength="13"></textarea>
 
             <div class="buttons-container">
              <!-- First row -->
