--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <!-- Display -->
             <textarea class="display" type="number" placeholder="0" maxlength="13" value="0"></textarea>
             <!-- the button container-->
-            <div class="buttons-container">
+            <div class="bContainer">
              <!-- First row -->
             <button class="clear" value="clear">C</button>
             <button class="operator" value="changeSign">±</button>
