--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="cal-zone">
         <div class="cal-container">
             <!-- Display -->
-            <textarea class="display" type="number" placeholder="0" maxlength="13" value="0"></textarea>
+            <div class="display">0</div>
             <!-- the button container-->
             <div class="bContainer">
              <!-- First row -->
@@ -50,9 +50,9 @@
         </div>
     </section>
 
-    <div class="logZone">
+    <!-- <div class="logZone">
         <p class="log"></p>
-    </div>
+    </div> -->
 </body>
 
 </html>
