--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <section class="cal-zone">
         <div class="cal-container">
             <!-- Display -->
-            <div class="display">0</div>
+            <div class="display"></div>
             <!-- the button container-->
             <div class="bContainer">
              <!-- First row -->
             <button class="clear" value="clear">C</button>
-            <button class="operator" value="changeSign">±</button>
-            <button class="operator" value="percent">%</button>
+            <button class="operator" value="someday">±</button>
+            <button class="operator" value="%">%</button>
             <button class="operator" value="squareRoot">√</button>
             <!-- Second row -->
             <button class="operand" value="7">7</button>
@@ -41,9 +41,9 @@
             <button class="operand" value="3">3</button>
             <button class="operator" value="-">-</button>
             <!-- Fifth row-->
-            <button class="zero" value="0">0</button>
+            <button class="operand" value="0">0</button>
             <button class="operator" value=".">.</button>
-            <button class="operator" value="=">=</button>
+            <button class="equal" value="=">=</button>
             <button class="operator" value="+">+</button>   
             </div>
             <div class="credits">Made in Kuriroley</div>
