changes on logic

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <button class="clear" value="clear">C</button>
             <button class="operator" value="someday">±</button>
             <button class="operator" value="%">%</button>
-            <button class="operator" value="squareRoot">√</button>
+            <button class="operator" value="v">√</button>
             <!-- Second row -->
             <button class="operand" value="7">7</button>
             <button class="operand" value="8">8</button>
@@ -34,7 +34,7 @@
             <button class="operand" value="4">4</button>
             <button class="operand" value="5">5</button>
             <button class="operand" value="6">6</button>
-            <button class="operand" value="*">*</button>
+            <button class="operator" value="*">*</button>
             <!-- Fourth row -->
             <button class="operand" value="1">1</button>
             <button class="operand" value="2">2</button>
