--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="cal-zone">
         <div class="cal-container">
             <!-- Display -->
-            <div class="display"></div>
+            <div class="display">0</div>
             <!-- the button container-->
             <div class="bContainer">
              <!-- First row -->
