changes on design

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <button class="clear" value="clear">C</button>
             <button class="operator" value="someday">±</button>
             <button class="operator" value="%">%</button>
-            <button class="operator" value="v">√</button>
+            <button class="operator"></button>
             <!-- Second row -->
             <button class="operand" value="7">7</button>
             <button class="operand" value="8">8</button>
@@ -41,8 +41,8 @@
             <button class="operand" value="3">3</button>
             <button class="operator" value="-">-</button>
             <!-- Fifth row-->
-            <button class="operand" value="0">0</button>
-            <button class="operator" value=".">.</button>
+            <button class="operand" name="zero" value="0">0</button>
+            <!-- <button class="operator" value="."></button> -->
             <button class="equal" value="=">=</button>
             <button class="operator" value="+">+</button>   
             </div>
