changes on interface

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <button class="equal" value="=">=</button>
             <button class="operator" value="+">+</button>   
             </div>
-            <div class="credits">Made in Kuriroley</div>
+            <div class="credits">Made in <a href="https://github.com/kuriroley"> Kuriroley</a>2023</div>
         </div>
     </section>
 
