--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <button class="operator" value="-">-</button>
             <!-- Fifth row-->
             <button class="operand" name="zero" value="0">0</button>
-            <!-- <button class="operator" value="."></button> -->
+            <button class="operator" value=".">.</button>
             <button class="equal" value="=">=</button>
             <button class="operator" value="+">+</button>   
             </div>
